--- a/Applications/WebController/Web/Tpl/css/hcweb.css
+++ b/Applications/WebController/Web/Tpl/css/hcweb.css
@@ -3,6 +3,38 @@
 	height: 5em;
 	font-size: 12px;
 	width: 100%;
+	border-radius: 30px;
+	color: #fff;
+	background-color: #0888E6;
+	border: 1px solid #2E9AE8;
+	box-shadow: 0px 1px 1px 0.3px rgba(255,255,255,0.4) inset;
+    background: -moz-linear-gradient(top,  #0888E6 30%, #4FABEF 60%, #0888E6 100%);
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#0888E6), color-stop(100%,#4FABEF));
+    background: -webkit-linear-gradient(top,  #0888E6 0%,#4FABEF 100%);
+    background: -o-linear-gradient(top,  #0888E6 0%,#4FABEF 100%);
+    background: -ms-linear-gradient(top,  #0888E6 0%,#4FABEF 100%);
+    background: linear-gradient(to bottom,  #0888E6 5%,#269CF3 50%, #0888E6 80%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#0888E6', endColorstr='#4FABEF',GradientType=0 );
+}
+
+.hcbtn:active,
+.hcbtn:focus {
+	outline: none
+}
+
+.hcbtnactive {
+	height: 5em;
+	font-size: 12px;
+	width: 100%;
+	border-radius: 30px;
+	color: #000;
+	background-color: #fff;
+	border: 1px solid #2E9AE8
+}
+
+.hcbtnactive:active,
+.hcbtnactive:focus {
+	outline: none
 }
 .hcbtnbox {
 	margin: 10px 0;
